Update package json

--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
   "name": "portfolio-backend",
-  "private": true,
   "version": "0.1.0",
-  "description": "A Strapi application",
+  "private": true,
+  "description": "Emmanuel Olivo - Front End Engineer | Portfolio Website",
+  "license": "MIT",
+  "author": {
+    "name": "Emmanuel Olivo"
+  },
   "scripts": {
-    "develop": "strapi develop",
-    "start": "strapi start",
     "build": "strapi build",
+    "dev": "strapi develop",
+    "start": "strapi start",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.24.3",
-    "@strapi/plugin-users-permissions": "4.24.3",
-    "@strapi/plugin-i18n": "4.24.3",
     "@strapi/plugin-cloud": "4.24.3",
+    "@strapi/plugin-i18n": "4.24.3",
+    "@strapi/plugin-users-permissions": "4.24.3",
+    "@strapi/strapi": "4.24.3",
     "better-sqlite3": "8.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
     "styled-components": "5.3.3"
   },
-  "author": {
-    "name": "A Strapi developer"
-  },
-  "strapi": {
-    "uuid": "1a259e3d-a710-4d5a-a371-f54e09f8658d"
-  },
+  "devDependencies": {},
   "engines": {
     "node": ">=18.0.0 <=20.x.x",
     "npm": ">=6.0.0"
   },
-  "license": "MIT"
+  "strapi": {
+    "uuid": "1a259e3d-a710-4d5a-a371-f54e09f8658d"
+  }
 }
