Add links to projects

--- a/src/components/components/project.json
+++ b/src/components/components/project.json
@@ -46,6 +46,12 @@
       "type": "relation",
       "relation": "oneToMany",
       "target": "api::technology.technology"
+    },
+    "linkToView": {
+      "type": "string"
+    },
+    "linkToCode": {
+      "type": "string"
     }
   }
 }
