--- a/src/components/layout/projects-section.json
+++ b/src/components/layout/projects-section.json
@@ -1,7 +1,8 @@
 {
   "collectionName": "components_layout_projects_sections",
   "info": {
-    "displayName": "Projects Section"
+    "displayName": "Projects Section",
+    "description": ""
   },
   "options": {},
   "attributes": {
@@ -11,11 +12,10 @@
     "subtitle": {
       "type": "text"
     },
-    "project": {
-      "displayName": "Project",
-      "type": "component",
-      "repeatable": true,
-      "component": "components.project"
+    "projects": {
+      "type": "relation",
+      "relation": "oneToMany",
+      "target": "api::project.project"
     }
   }
 }
